--- a/.github/workflows/release-udp-exporter.yml
+++ b/.github/workflows/release-udp-exporter.yml
@@ -16,16 +16,16 @@ env:
   AWS_SIGNING_KEY_REGION: us-west-2
 
 jobs:
-  validate-udp-exporter-e2e-test:
-    name: "Validate X-Ray UDP Exporter E2E Test Succeeds"
-    uses: ./.github/workflows/udp-exporter-e2e-test.yml
-    secrets: inherit
-    permissions:
-      id-token: write
+  # validate-udp-exporter-e2e-test:
+  #   name: "Validate X-Ray UDP Exporter E2E Test Succeeds"
+  #   uses: ./.github/workflows/udp-exporter-e2e-test.yml
+  #   secrets: inherit
+  #   permissions:
+  #     id-token: write
 
   build-release-udp-exporter-nuget:
     # Only release if previous e2e test succeeds
-    needs: validate-udp-exporter-e2e-test
+    # needs: validate-udp-exporter-e2e-test
     environment: Release
     runs-on: windows-latest
 
@@ -45,18 +45,18 @@ jobs:
           /p:Configuration=Release
           --no-restore
 
-      - name: Assume signer role
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ARTIFACT_ACCESS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_SIGNING_KEY_REGION }}
+      # - name: Assume signer role
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: ${{ secrets.AWS_ARTIFACT_ACCESS_ROLE_ARN }}
+      #     aws-region: ${{ env.AWS_SIGNING_KEY_REGION }}
 
-      - name: Invoke Signing script
-        env:
-          UNSIGNED_BUCKET: ${{ secrets.AWS_UNSIGNED_BUCKET_NAME }}
-          SIGNED_BUCKET: ${{ secrets.AWS_SIGNED_BUCKET_NAME }}
-        run: |
-          .\buildtools\sign_files.ps1 -Filters AWS.Distro.OpenTelemetry.Exporter.Xray.Udp.dll -Recurse -Path .\exporters\AWS.Distro.OpenTelemetry.Exporter.Xray.Udp\bin\Release
+      # - name: Invoke Signing script
+      #   env:
+      #     UNSIGNED_BUCKET: ${{ secrets.AWS_UNSIGNED_BUCKET_NAME }}
+      #     SIGNED_BUCKET: ${{ secrets.AWS_SIGNED_BUCKET_NAME }}
+      #   run: |
+      #     .\buildtools\sign_files.ps1 -Filters AWS.Distro.OpenTelemetry.Exporter.Xray.Udp.dll -Recurse -Path .\exporters\AWS.Distro.OpenTelemetry.Exporter.Xray.Udp\bin\Release
 
       - name: Pack nugets
         run: >
@@ -67,30 +67,30 @@ jobs:
           -c Release
           -o .\Deployment\nuget-packages
 
-      - name: Upload nugets to this GitHub Action run as an artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: udp-exporter-nuget-packages.zip
-          path: Deployment/nuget-packages/
+      # - name: Upload nugets to this GitHub Action run as an artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: udp-exporter-nuget-packages.zip
+      #     path: Deployment/nuget-packages/
 
-      - name: Assume nuget role
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.NUGET_ACCESS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_SIGNING_KEY_REGION }}
+      # - name: Assume nuget role
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: ${{ secrets.NUGET_ACCESS_ROLE_ARN }}
+      #     aws-region: ${{ env.AWS_SIGNING_KEY_REGION }}
 
-      - name: Push packages to Nuget
-        run: >
-          $nugetKey = aws secretsmanager get-secret-value
-          --secret-id ${{ secrets.NUGET_SECRETS_ID }}
-          --region ${{ env.AWS_SIGNING_KEY_REGION }}
-          --output text
-          --query SecretString | ConvertFrom-Json
+      # - name: Push packages to Nuget
+      #   run: >
+      #     $nugetKey = aws secretsmanager get-secret-value
+      #     --secret-id ${{ secrets.NUGET_SECRETS_ID }}
+      #     --region ${{ env.AWS_SIGNING_KEY_REGION }}
+      #     --output text
+      #     --query SecretString | ConvertFrom-Json
 
-          nuget push
-          .\Deployment\nuget-packages\*.nupkg
-          -Source https://api.nuget.org/v3/index.json
-          -ApiKey $nugetKey.Key
+      #     nuget push
+      #     .\Deployment\nuget-packages\*.nupkg
+      #     -Source https://api.nuget.org/v3/index.json
+      #     -ApiKey $nugetKey.Key
 
       - name: Create Release Notes
         run: |
